addingd reminders on code

--- a/views/task/alltask.hbs
+++ b/views/task/alltask.hbs
@@ -47,7 +47,7 @@
 </table>
 
 
-{{!-- Tabla de tareas hechas --}}
+{{!-- Tabla de tareas hechas(no lista) --}}
 {{!-- <table class="table">
   <h2 style="padding: 10px 0 10px 0;">Done reminders</h2>
   <thead>
