--- a/views/index.hbs
+++ b/views/index.hbs
@@ -55,7 +55,7 @@
             <div class="panel-heading">
                 <span class="glyphicon glyphicon-comment"></span>
                 <h3 class="panel-title">
-                    Recent Comments</h3>
+                    Recent leads</h3>
                 <span class="label label-info">
                     </span>
             </div>
