--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,6 +27,9 @@
       <li class="nav-item">
         <a class="nav-link" href="/users">Users</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/leads">Leads</a>
+      </li>
       </ul>
 
 
